--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
@@ -33,4 +33,4 @@ jobs:
           
           ssh-keyscan -H 10.0.10.101 >> ~/.ssh/known_hosts
           
-          rsync -avz --delete -e "ssh -i ~/.ssh/github-runner -o StrictHostKeyChecking=no" dist/ webuser@10.0.10.101:/var/www/runner
+          rsync -avz --delete --no-perms --no-times -e "ssh -i ~/.ssh/github-runner -o StrictHostKeyChecking=no" dist/ webuser@10.0.10.101:/var/www/runner
